plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'cookierun'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_24
    targetCompatibility = JavaVersion.VERSION_24
}

javafx {
    version = '24.0.2'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
}

application {
    mainClass = 'application.CookieRunApp'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}
sourceSets {
    main {
        java { srcDirs = ['src/main/java'] }
        resources { srcDirs = ['src/main/resources'] }
    }
}

jar {
    manifest {
        attributes(
            'Main-Class': 'application.CookieRunApp'
        )
    }
}
dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
kotlin {
    jvmToolchain(24)
}
